test/Tests/Module/SameStageSameName.golden

test\Tests\Module\SameStageSameName.hs:27:3: error:
    * 'entryPoint': duplicate entry point declaration.
      There already exists a Vertex shader named "main".
    * In a stmt of a 'do' block:
        entryPoint @"main" @Vertex do put @"out" =<< get @"in"
      In the first argument of `Module', namely
        `do entryPoint @"main" @Vertex do put @"out" =<< get @"in"
            entryPoint @"main" @Vertex do put @"out" =<< get @"in"'
      In the expression:
        Module
          do entryPoint @"main" @Vertex do put @"out" =<< get @"in"
             entryPoint @"main" @Vertex do put @"out" =<< get @"in"
   |
27 |   entryPoint @"main" @Vertex do

   |   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^...
